<resources>
    <string name="app_name">House of Cards 2024 Full Demo</string>
    <string name="game_name">House of Cards 2024</string>
    <string name="points">Points:</string>
    <string name="number">Number:</string>
    <string name="alpha">Alpha:</string>
    <string name="bravo">Bravo:</string>
    <string name="charlie">Charlie:</string>
    <string name="delta">Delta:</string>
    <string name="game_over">Game Over!</string>
    <string name="high_scores">High Scores</string>
    <string name="play_again">Play Again</string>
    <string name="final_points">Final Points:</string>
</resources>