<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        android:text="@string/game_over" />

    <TextView
        android:id="@+id/tv_final_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:text="@string/final_points" />

    <Button
        android:id="@+id/btn_high_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_final_points"
        android:layout_alignParentEnd="true"
        android:text="@string/high_scores" />

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_final_points"
        android:text="@string/play_again" />

</RelativeLayout>